教室_pop弹出样式调整

--- a/app/src/main/res/layout/layout_classroom_panel.xml
+++ b/app/src/main/res/layout/layout_classroom_panel.xml
@@ -289,7 +289,7 @@
             android:layout_marginBottom="@dimen/px10"
             android:visibility="gone"
             android:padding="@dimen/px25"
-            android:background="@drawable/white_board_panel_bg">
+            android:background="@drawable/wb_conner_bg">
 
         <ImageView
                 android:id="@+id/select_btn"
