--- a/app/src/main/res/layout/layout_wb_geometry_pop.xml
+++ b/app/src/main/res/layout/layout_wb_geometry_pop.xml
@@ -4,8 +4,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="@dimen/px30"
-        android:background="@color/classroom_main_gray">
+        android:padding="@dimen/px30">
 
     <ImageView
             android:id="@+id/shape_rectangle"
