--- a/app/src/main/res/layout/layout_live_menu.xml
+++ b/app/src/main/res/layout/layout_live_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
-              android:background="@drawable/ic_arrow_left_top_bg"
+              android:background="@drawable/white_board_panel_bg"
               android:paddingBottom="@dimen/px15"
               android:paddingTop="@dimen/px15"
               android:layout_width="wrap_content"
@@ -13,7 +13,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/px20"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/circle_tab_selector"/>
+            android:src="@drawable/switch_camera_selector"/>
 
     <ImageView
             android:id="@+id/live_menu_video"
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/px20"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/circle_tab_selector"/>
+            android:src="@drawable/camera_selector"/>
 
     <ImageView
             android:id="@+id/live_menu_audio"
@@ -29,13 +29,14 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/px20"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/circle_tab_selector"/>
+            android:src="@drawable/mic_selector"/>
 
     <ImageView
             android:id="@+id/live_menu_scale"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/px20"
+            android:layout_marginRight="@dimen/px20"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/circle_tab_selector"/>
+            android:src="@drawable/scale_selector"/>
 </LinearLayout>
