--- a/app/src/main/res/layout/layout_live_menu.xml
+++ b/app/src/main/res/layout/layout_live_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
-              android:background="@drawable/white_board_panel_bg"
+              android:background="@drawable/wb_conner_bg"
               android:paddingBottom="@dimen/px15"
               android:paddingTop="@dimen/px15"
               android:layout_width="wrap_content"
