--- a/app/src/main/res/layout/layout_classroom_panel.xml
+++ b/app/src/main/res/layout/layout_classroom_panel.xml
@@ -288,7 +288,6 @@
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="@dimen/px10"
             android:visibility="gone"
-            android:padding="@dimen/px25"
             android:background="@drawable/wb_conner_bg">
 
         <ImageView
@@ -297,6 +296,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:layout_alignParentLeft="true"
+                android:padding="@dimen/px25"
                 android:src="@drawable/wb_selection_selector"/>
 
         <ImageView
@@ -306,7 +306,7 @@
                 android:layout_centerInParent="true"
                 android:src="@drawable/wb_brush_selector"
                 android:layout_toRightOf="@+id/select_btn"
-                android:layout_marginLeft="@dimen/px50"/>
+                android:padding="@dimen/px25"/>
 
         <ImageView
                 android:id="@+id/shape_btn"
@@ -314,7 +314,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:layout_toRightOf="@+id/handwriting_btn"
-                android:layout_marginLeft="@dimen/px50"/>
+                android:padding="@dimen/px25"/>
 
         <ImageView
                 android:id="@+id/eraser_btn"
@@ -323,7 +323,7 @@
                 android:layout_centerInParent="true"
                 android:src="@drawable/wb_eraser_selector"
                 android:layout_toRightOf="@+id/shape_btn"
-                android:layout_marginLeft="@dimen/px50"/>
+                android:padding="@dimen/px25"/>
 
         <ImageView
                 android:id="@+id/text_btn"
@@ -332,7 +332,7 @@
                 android:layout_centerInParent="true"
                 android:src="@drawable/wb_text_selector"
                 android:layout_toRightOf="@+id/eraser_btn"
-                android:layout_marginLeft="@dimen/px50"/>
+                android:padding="@dimen/px25"/>
 
         <com.benyuan.xiaojs.ui.classroom.whiteboard.widget.CircleView
                 android:id="@+id/color_picker_btn"
@@ -340,7 +340,8 @@
                 android:layout_height="@dimen/px40"
                 android:layout_centerInParent="true"
                 android:layout_toRightOf="@+id/text_btn"
-                android:layout_marginLeft="@dimen/px50"/>
+                android:layout_marginLeft="@dimen/px25"
+                android:layout_marginRight="@dimen/px25"/>
 
     </RelativeLayout>
 
