--- a/app/src/main/res/layout/layout_home_live_item.xml
+++ b/app/src/main/res/layout/layout_home_live_item.xml
@@ -2,36 +2,115 @@
 
 <FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/white_bolder_bg">
+        android:layout_height="wrap_content">
 
     <LinearLayout
-
+            android:id="@+id/home_live_item"
+            android:background="@drawable/white_bolder_bg"
+            android:layout_marginLeft="@dimen/px30"
+            android:layout_marginRight="@dimen/px30"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        <ImageView
-                android:src="@drawable/default_portrait"
-                android:scaleType="fitXY"
+        <RelativeLayout
+                android:id="@+id/home_live_item_wrapper"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/px147"/>
+                android:layout_height="wrap_content">
+
+            <ImageView
+                    android:id="@+id/home_live_item_mark"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="@dimen/px15"
+                    android:layout_alignParentTop="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            <ImageView
+                    android:id="@+id/home_live_image"
+                    android:src="@drawable/default_portrait"
+                    android:scaleType="fitXY"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+
+            <RelativeLayout
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="@dimen/px15"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                <com.benyuan.xiaojs.ui.widget.RoundedImageView
+                        android:id="@+id/home_live_item_portrait"
+                        app:corner_radius="@dimen/px30"
+                        android:scaleType="fitXY"
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerInParent="true"
+                        android:layout_marginLeft="@dimen/px15"
+                        app:border_color="@color/white"
+                        app:border_width="@dimen/px1"
+                        android:layout_width="@dimen/px60"
+                        android:layout_height="@dimen/px60"/>
+
+                <LinearLayout
+                        android:layout_toRightOf="@id/home_live_item_portrait"
+                        android:layout_marginLeft="@dimen/px15"
+                        android:layout_centerInParent="true"
+                        android:orientation="vertical"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                    <TextView
+                            android:id="@+id/home_live_item_teacher"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/font_32px"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                    <LinearLayout
+                            android:orientation="horizontal"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+
+                        <TextView
+                                android:id="@+id/home_live_item_level"
+                                android:textSize="@dimen/font_28px"
+                                android:textColor="@color/font_orange"
+                                android:text="P5"
+                                android:layout_gravity="center_vertical"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+
+                        <com.benyuan.xiaojs.ui.widget.EvaluationStar
+                                android:id="@+id/home_live_item_star"
+                                android:layout_gravity="center_vertical"
+                                android:layout_marginLeft="@dimen/px10"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+                    </LinearLayout>
+                </LinearLayout>
+            </RelativeLayout>
+        </RelativeLayout>
 
         <TextView
-                android:text="title"
-                android:layout_marginTop="@dimen/px30"
-                android:layout_marginLeft="@dimen/px30"
-                android:layout_marginRight="@dimen/px30"
+                android:id="@+id/home_live_title"
+                android:text="人力资源师三级考试通过百分百"
+                android:layout_marginTop="@dimen/px20"
+                android:layout_marginLeft="@dimen/px15"
+                android:layout_marginRight="@dimen/px15"
+                android:textColor="@color/font_black"
+                android:textSize="@dimen/font_32px"
                 android:maxLines="1"
+                android:ellipsize="end"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
         <RelativeLayout
-                android:layout_marginTop="@dimen/px20"
-                android:layout_marginBottom="@dimen/px30"
-                android:layout_marginLeft="@dimen/px30"
-                android:layout_marginRight="@dimen/px30"
+                android:layout_marginTop="@dimen/px15"
+                android:layout_marginBottom="@dimen/px20"
+                android:layout_marginLeft="@dimen/px15"
+                android:layout_marginRight="@dimen/px15"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -40,14 +119,18 @@
                     android:layout_marginLeft="@dimen/px30"
                     android:layout_alignParentRight="true"
                     android:layout_centerInParent="true"
-                    android:text="price"
+                    android:text="￥90.00"
+                    android:textColor="@color/font_red"
+                    android:textSize="@dimen/font_26px"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
             <TextView
                     android:id="@+id/home_live_item_num"
-                    android:text="name"
+                    android:text="145人报名"
                     android:layout_toLeftOf="@id/home_live_item_price"
+                    android:textColor="@color/common_text"
+                    android:textSize="@dimen/font_26px"
                     android:layout_alignParentLeft="true"
                     android:layout_centerInParent="true"
                     android:layout_width="wrap_content"
