--- a/app/src/main/res/layout/layout_live_block_item.xml
+++ b/app/src/main/res/layout/layout_live_block_item.xml
@@ -2,13 +2,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="@drawable/white_grey_selector"
              android:layout_width="match_parent"
-             android:layout_height="match_parent">
+             android:layout_height="wrap_content">
 
     <LinearLayout
             android:orientation="vertical"
             android:layout_marginRight="@dimen/px15"
             android:layout_marginLeft="@dimen/px15"
-            android:layout_width="@dimen/px260"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
         <LinearLayout
