--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -75,6 +75,7 @@
 
     <color name="progresshud_default_color">#b1000000</color>
 
+    <color name="light_grey">#fcfcfc</color>
     <!--whiteboard-->
     <color name="wb_color_1">#44DB5E</color>
     <color name="wb_color_2">#54C7FC</color>
