--- a/app/src/main/res/layout/layout_common_dialog.xml
+++ b/app/src/main/res/layout/layout_common_dialog.xml
@@ -26,6 +26,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
+    <FrameLayout
+            android:id="@+id/common_dialog_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
     <View
             style="@style/DividerHorizontal"
             android:layout_marginTop="@dimen/px60"/>
