1.主界面tab修改 2.首页修改为动态列表 3.增加直播页 4.增加个人主页 5.增加动态详情页

--- a/app/src/main/res/layout/activity_base_tab.xml
+++ b/app/src/main/res/layout/activity_base_tab.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:visibility="gone"
             android:layout_gravity="bottom"
-            android:layout_marginBottom="@dimen/px15"/>
+            android:layout_marginBottom="@dimen/px5"/>
 
     <LinearLayout
             android:orientation="vertical"
@@ -42,12 +42,27 @@
     </LinearLayout>
 
 
-    <ImageView
-            android:id="@+id/home_center_image"
-            android:src="@drawable/ic_center"
-            android:visibility="gone"
+    <FrameLayout
+            android:layout_marginBottom="-5dp"
             android:layout_gravity="bottom|center"
-            android:layout_marginBottom="@dimen/px15"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content">
+
+        <ImageView
+                android:src="@drawable/ic_home_center_shadow"
+                android:visibility="visible"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        <ImageView
+                android:id="@+id/home_center_image"
+                android:src="@drawable/ic_center"
+                android:visibility="visible"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+    </FrameLayout>
+
+
 </FrameLayout>
