--- a/app/src/main/res/layout/layout_moment_header.xml
+++ b/app/src/main/res/layout/layout_moment_header.xml
@@ -18,6 +18,12 @@
             android:text="关注"
             android:layout_alignParentRight="true"
             android:layout_centerInParent="true"
+            android:textColor="@color/font_orange"
+            android:textSize="@dimen/font_28px"
+            android:gravity="center"
+            android:minWidth="@dimen/px100"
+            android:background="@drawable/orange_stoke_bg"
+            android:padding="@dimen/px5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
@@ -58,7 +64,7 @@
         <LinearLayout
                 android:id="@+id/home_header_desc_wrapper"
                 android:orientation="horizontal"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
             <TextView
@@ -70,16 +76,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
-            <TextView
+            <com.benyuan.xiaojs.ui.widget.IconTextView
                     android:id="@+id/moment_header_desc"
                     android:layout_gravity="center_vertical"
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:layout_marginLeft="@dimen/px30"
-                    android:text="2022考研政治高分补习培优班"
+                    android:text="2022考研政治高分补习培优班2022考研政治高分补习培优班"
                     android:textColor="@color/font_black"
                     android:textSize="@dimen/font_24px"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
+                    app:maxLine="1"
                     android:layout_height="wrap_content"/>
         </LinearLayout>
 
