--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,7 +25,7 @@
                 android:layout_width="match_parent"
                 android:layout_marginLeft="@dimen/px30"
                 android:layout_marginRight="@dimen/px30"
-                android:background="@drawable/ic_home_search"
+                android:background="@drawable/ic_search_bg"
                 android:layout_gravity="center_vertical"
                 android:layout_height="wrap_content">
 
@@ -46,9 +46,13 @@
 
     <TextView
             android:id="@+id/home_moment_tip"
+            android:background="@drawable/ic_home_moment_msg"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="@dimen/px200"
+            android:layout_marginBottom="@dimen/px120"
             android:text="123"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textSize="@dimen/font_30px"
             android:layout_centerInParent="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
