--- a/app/src/main/res/layout/fragment_moment.xml
+++ b/app/src/main/res/layout/fragment_moment.xml
@@ -1,17 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.benyuan.xiaojs.common.pulltorefresh.core.PullToRefreshGridView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/live_grid"
-        android:scrollbars="none"
-        android:paddingBottom="@dimen/px100"
-        android:divider="@android:color/transparent"
-        android:listSelector="@android:color/transparent"
-        android:horizontalSpacing="0dp"
-        android:verticalSpacing="@dimen/px30"
-        android:numColumns="2"
-        android:clipToPadding="true"
-        android:background="@color/white"
-        android:stretchMode="columnWidth"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-</com.benyuan.xiaojs.common.pulltorefresh.core.PullToRefreshGridView>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
+
+    <LinearLayout
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/px88"
+            android:background="@color/white"
+            android:orientation="horizontal">
+
+        <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_marginLeft="@dimen/px30"
+                android:layout_marginRight="@dimen/px30"
+                android:background="@drawable/grey_conner_bg"
+                android:layout_gravity="center_vertical"
+                android:layout_height="@dimen/px60">
+
+            <TextView
+                    android:id="@+id/my_course_search"
+                    android:layout_width="wrap_content"
+                    android:drawableLeft="@drawable/ic_search"
+                    android:layout_centerInParent="true"
+                    android:text="@string/home_search_hint"
+                    android:textColor="@color/search_gray"
+                    android:textSize="@dimen/font_28px"
+                    android:drawablePadding="@dimen/px10"
+                    android:gravity="center"
+                    android:layout_height="wrap_content"/>
+        </RelativeLayout>
+
+    </LinearLayout>
+
+    <View style="@style/DividerHorizontal"/>
+
+    <com.benyuan.xiaojs.common.pulltorefresh.core.PullToRefreshGridView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/live_grid"
+            android:scrollbars="none"
+            android:paddingBottom="@dimen/px100"
+            android:divider="@android:color/transparent"
+            android:listSelector="@android:color/transparent"
+            android:horizontalSpacing="0dp"
+            android:verticalSpacing="@dimen/px30"
+            android:numColumns="2"
+            android:clipToPadding="true"
+            android:background="@color/white"
+            android:stretchMode="columnWidth"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+    </com.benyuan.xiaojs.common.pulltorefresh.core.PullToRefreshGridView>
+</LinearLayout>
