--- a/app/src/main/res/layout/layout_base_header.xml
+++ b/app/src/main/res/layout/layout_base_header.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="@dimen/px90"
-             android:background="@color/white"
-             android:orientation="horizontal">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/px90"
+                android:background="@color/white"
+                android:orientation="horizontal">
 
     <TextView
             android:id="@+id/left_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left|center_vertical"
             android:paddingLeft="@dimen/px32"
             android:paddingRight="@dimen/px32"
             android:paddingTop="@dimen/px16"
@@ -23,6 +22,8 @@
             android:paddingRight="@dimen/px32"
             android:paddingTop="@dimen/px16"
             android:paddingBottom="@dimen/px16"
+            android:layout_alignParentLeft="true"
+            android:layout_centerInParent="true"
             android:src="@drawable/back_arrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -33,7 +34,7 @@
             android:layout_height="wrap_content"
             android:textSize="@dimen/font_34px"
             android:textStyle="bold"
-            android:layout_gravity="center"
+            android:layout_centerInParent="true"
             android:textColor="@color/def"/>
 
     <TextView
@@ -44,16 +45,32 @@
             android:paddingLeft="@dimen/px32"
             android:paddingRight="@dimen/px32"
             android:paddingTop="@dimen/px16"
+            android:layout_alignParentRight="true"
+            android:layout_centerInParent="true"
             android:paddingBottom="@dimen/px16"
             android:textColor="@color/font_black"/>
 
     <ImageView
             android:id="@+id/right_image"
-            android:layout_gravity="right|center_vertical"
+            android:paddingLeft="@dimen/px32"
+            android:paddingRight="@dimen/px32"
+            android:paddingTop="@dimen/px16"
+            android:paddingBottom="@dimen/px16"
+            android:layout_alignParentRight="true"
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    <ImageView
+            android:id="@+id/right_image2"
+            android:layout_toLeftOf="@id/right_image"
+            android:layout_centerInParent="true"
             android:paddingLeft="@dimen/px32"
             android:paddingRight="@dimen/px32"
             android:paddingTop="@dimen/px16"
             android:paddingBottom="@dimen/px16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-</FrameLayout>
+
+
+</RelativeLayout>
